<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="forgot_password_text">Please fill in the email address for password</string>
    <string name="email">E-mail Address:</string>
    <string name="send">Send</string>
    <string name="old_password">Old Password:</string>
    <string name="New">New:</string>
    <string name="confirm_new">Confirm New:</string>
    <string name="tableNo">Table No: </string>
    <string name="orderItems">Ordered Items: </string>
    <string name="add_item">Add Item</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_amount">Total Amount: </string>
    <string name="Item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="filter_by">Filter by:</string>
    <string name="search">Search:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="remove_item">Remove Item</string>
    <string name="amount_paid">Amount Paid: </string>
    <string name="changes">Changes:</string>
    <string name="pay">Pay</string>
    <string name="back">Back</string>
    <string name="rm">RM</string>
    <string name="select_report_type">Select report type:</string>
    <string-array name="report_type">
        <item>Monthly Sales</item>
        <item>Popular Menu</item>
        <item>Staff Summary</item>
    </string-array>
    <string name="table">Tables:</string>
    <string name="clear_orders">Clear Orders</string>

    <string name="grand_total">Grand Total: </string>
    <string name="order_id">Order ID: </string>
    <string name="payment_date">Payment Date: </string>
    <string name="payment_id">Payment ID: </string>
    <string name="staff_id">Staff ID: </string>
    <string name="payment_time">Payment Time: </string>
    <string name="make_order">Make Order</string>
    <string name="view_payment">View Payment History</string>
    <string name="start_date">Start date :</string>
    <string name="end_date">End date :</string>
    <string name="nulltext">Null</string>
    <string name="generate_report">Generate Report</string>
    <string name="tao_to_select">Tap to select</string>
    <string name="type">Type :</string>
    <string-array name="food_type">
        <item>Food</item>
        <item>Drink</item>
    </string-array>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="hint_username">Your Username</string>
    <string name="hint_password">Your Password</string>
    <string name="login">Log In</string>
    <string name="maintenance">Maintenance</string>
    <string name="logout">Logout</string>
    <string name="add_menu">Add Menu</string>
    <string name="update_menu">Update Menu</string>
    <string name="add_staff">Add Staff</string>
    <string name="update_staff">Update Staff</string>
    <string name="maintain_menu">Maintain Menu:</string>
    <string name="maintain_staff">Maintain Staff:</string>
    <string-array name="position">
        <item>Chef</item>
        <item>Cleaner</item>
        <item>Cashier</item>
        <item>Manager</item>
        <item>Waiter</item>
    </string-array>
    <string-array name="status">
        <item>Working</item>
        <item>Resign</item>
        <item>Retire</item>
        <item>MIA</item>
    </string-array>

</resources>
