<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrder">


    <TextView
        android:id="@+id/tableNoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tableNo"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tableNo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="270dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tableNoTV"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/orderedItemsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/orderItems"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableNoTV" />

    <Button
        android:id="@+id/addItemBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/makePaymentBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/make_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/addItemBtn" />

    <TextView
        android:id="@+id/totalPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTotalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalPrice"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="156dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="156dp"
        android:text="@string/total_amount"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toTopOf="@+id/makePaymentBtn"
        app:layout_constraintEnd_toStartOf="@+id/totalPriceTV"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/list_view_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderedItemsTV">

        <TextView
            android:id="@+id/tvTitleQuantity"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/tvTitleItemName"
            android:paddingEnd="3dp"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/tvTitleItemName"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/Item_name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/tvTitleTotal"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_toEndOf="@+id/tvTitleQuantity"
            android:paddingEnd="5dp"
            android:text="@string/total"
            android:textAlignment="textEnd"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <ListView
            android:id="@+id/orderListLV"
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:layout_below="@+id/tvTitleQuantity"
            android:background="@drawable/list_view_border" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>