<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentHistoryDetail"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/staffID"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:text="@string/staff_id"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTime" />

    <TextView
        android:id="@+id/orderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:text="@string/order_id"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/grand_total"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staffID" />

    <TextView
        android:id="@+id/amountPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/amount_paid"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grandTotal" />

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/changes"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountPaid" />

    <TextView
        android:id="@+id/paymentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_id"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderID" />

    <TextView
        android:id="@+id/paymentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentID" />

    <TextView
        android:id="@+id/paymentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_time"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentDate" />

    <TextView
        android:id="@+id/orderIDTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/orderID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentIDTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/paymentID"
        app:layout_constraintTop_toBottomOf="@+id/orderIDTextDetail" />

    <TextView
        android:id="@+id/staffIDTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/staffID"
        app:layout_constraintTop_toBottomOf="@+id/payTimeDetail" />

    <TextView
        android:id="@+id/grandTotalTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/grandTotal"
        app:layout_constraintTop_toBottomOf="@+id/staffIDTextDetail" />

    <TextView
        android:id="@+id/amountPaidTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/amountPaid"
        app:layout_constraintTop_toBottomOf="@+id/grandTotalTextDetail" />

    <TextView
        android:id="@+id/changeTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/change"
        app:layout_constraintTop_toBottomOf="@+id/amountPaidTextDetail" />

    <TextView
        android:id="@+id/payDateDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/paymentDate"
        app:layout_constraintTop_toBottomOf="@+id/paymentIDTextDetail" />

    <TextView
        android:id="@+id/payTimeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/paymentTime"
        app:layout_constraintTop_toBottomOf="@+id/payDateDetail" />

    <Button
        android:id="@+id/payCancel"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>